--- a/src/app/company/company-edit/company-edit.component.html
+++ b/src/app/company/company-edit/company-edit.component.html
@@ -4,8 +4,11 @@
     <input type="text" matInput [(ngModel)]="company.name">
   </mat-form-field>
   <mat-card-actions align="start">
-    <button mat-raised-button (click)="editCompany(company)">Edit</button>
-    <button mat-raised-button (click)="deleteCompany()">Delete</button>
-    <button mat-raised-button color="primary" (click)="saveCompany(company)">Save</button>
+    <button *ngIf="!isNew" mat-raised-button (click)="deleteCompany()">Delete</button>
+    <span fxFlex="auto"></span>
+    <button *ngIf="!isNew" mat-raised-button (click)="editCompany(company)">Edit</button>
+    <button *ngIf="isNew" mat-raised-button color="primary" (click)="saveCompany(company)">Save</button>
+
+
   </mat-card-actions>
 </mat-card>
